force-app/main/default/objects/Opportunity/fields/Asset_Classes__c.field-meta.xml
<CustomField>
    <fullName>Asset_Classes__c</fullName>
    <description>For which asset classes would we be providing return shipping services?</description>
    <inlineHelpText>For which asset classes would we be providing return shipping services?</inlineHelpText>
    <label>Asset Classes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bins</fullName>
            </value>
            <value>
                <fullName>Copiers</fullName>
            </value>
            <value>
                <fullName>Crates</fullName>
            </value>
            <value>
                <fullName>Dunnage</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Kegs</fullName>
            </value>
            <value>
                <fullName>Pallets</fullName>
            </value>
            <value>
                <fullName>Racks</fullName>
            </value>
            <value>
                <fullName>Reels</fullName>
            </value>
            <value>
                <fullName>Tanks</fullName>
            </value>
            <value>
                <fullName>Totes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>