force-app/main/default/objects/Opportunity/fields/Est_Annual_Rev__c.field-meta.xml
<CustomField>
    <fullName>Est_Annual_Rev__c</fullName>
    <description>Amount of annual revenue we expect to earn from this asset class at full capacity.</description>
    <inlineHelpText>Amount of annual revenue we expect to earn from this asset class at full capacity.</inlineHelpText>
    <label>Est. Annual Rev</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>