force-app/main/default/objects/Opportunity/fields/Lease_or_recycling__c.field-meta.xml
<CustomField>
    <fullName>Lease_or_recycling__c</fullName>
    <label>Lease or recycling</label>
    <type>TextArea</type>
</CustomField>