force-app/main/default/objects/Opportunity/fields/Medical_assumptions__c.field-meta.xml
<CustomField>
    <fullName>Medical_assumptions__c</fullName>
    <description>Describes what is known and assumed about the estimated revenue projections.</description>
    <inlineHelpText>Describes what is known and assumed about the estimated revenue projections.</inlineHelpText>
    <label>Medical assumptions</label>
    <type>TextArea</type>
</CustomField>