force-app/main/default/objects/Opportunity/fields/Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Volume__c</fullName>
    <description>Estimated number of RAs or returns they currently have for this asset class.</description>
    <inlineHelpText>Estimated number of RAs or returns they currently have for this asset class.</inlineHelpText>
    <label>Monthly Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>