force-app/main/default/objects/Opportunity/fields/Opp_Age__c.field-meta.xml
<CustomField>
    <fullName>Opp_Age__c</fullName>
    <description>This is the number of days from the Opportunity Start Date. Calculated automatically.</description>
    <formula>TODAY()-Opportunity_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the number of days from the Opportunity Start Date. Calculated automatically.</inlineHelpText>
    <label>Opp. Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>