force-app/main/default/objects/Opportunity/fields/Opportunity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Start_Date__c</fullName>
    <description>The date this lead became an opportunity (when we should have converted them and created the Opportunity).</description>
    <inlineHelpText>The date this lead became an opportunity (when we should have converted them and created the Opportunity).</inlineHelpText>
    <label>Opportunity Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>