force-app/main/default/objects/Opportunity/fields/Returnable_Asset_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Returnable_Asset_Quantity__c</fullName>
    <description>About how many reusable packaging assets do they have that can be used for Track &amp; Trace?</description>
    <inlineHelpText>About how many reusable packaging assets do they have that can be used for Track &amp; Trace?</inlineHelpText>
    <label>Reusable Assets for T&amp;T</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>