force-app/main/default/objects/Opportunity/fields/Take_Rate__c.field-meta.xml
<CustomField>
    <fullName>Take_Rate__c</fullName>
    <description>Estimated Take Rate on monthly volume.</description>
    <inlineHelpText>Estimated Take Rate on monthly volume. Enter a whole number (like 20) to represent a percent.</inlineHelpText>
    <label>Take Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>