force-app/main/default/objects/Opportunity/fields/Total_Est_Annual_Rev__c.field-meta.xml
<CustomField>
    <fullName>Total_Est_Annual_Rev__c</fullName>
    <description>Total annual revenue based on adding all asset class estimates.</description>
    <formula>Est_Annual_Rev__c +  Est_Annual_Rev_IT__c + Est_Annual_Rev_Medical__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total annual revenue based on adding all asset class estimates.</inlineHelpText>
    <label>Total Est. Annual Rev.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>