force-app/main/default/objects/Opportunity/fields/Value_Per_Return__c.field-meta.xml
<CustomField>
    <fullName>Value_Per_Return__c</fullName>
    <description>Estimated top line revenue we would expect to gain from each successful shipment (return).</description>
    <inlineHelpText>Estimated top line revenue we would expect to gain from each successful shipment (return).</inlineHelpText>
    <label>Value Per Return</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>